--- a/clash.ini
+++ b/clash.ini
@@ -1,7 +1,9 @@
 ;1、域名组
 ruleset=👽 AI1,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI.list
 ruleset=👽 AI2,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI2.list
-ruleset=APPLE 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=🍎 APPLE服务,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-server.list
+ruleset=🍎 APPLE推送,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-push.list
+ruleset=🍎 APPLE下载,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-iosapp-cdn.list
 ruleset=👯‍♂️ TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 ruleset=🙋 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=📀 流媒体,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/YouTube.list
