--- a/clash.ini
+++ b/clash.ini
@@ -2,6 +2,7 @@
 ruleset=👽 AI1,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI.list
 ruleset=👽 AI2,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI2.list
 ruleset=🍎 Apple服务,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-server.list
+ruleset=🍎 Apple下单,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-secure.list
 ruleset=🍎 Apple推送,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-push.list
 ruleset=🍎 Apple下载⚡,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-iosapp-cdn.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
@@ -21,6 +22,7 @@ ruleset=➡️ 国内,[]FINAL
 ;2、策略组（域名组-节点组）
 custom_proxy_group=👽 AI1`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=👽 AI2`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🍎 Apple下单`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🍎 Apple服务`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🍎 Apple推送`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🍎 Apple下载⚡`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
