--- a/clash.ini
+++ b/clash.ini
@@ -1,7 +1,7 @@
 ;1、域名组
 ruleset=👽 AI1,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI.list
 ruleset=👽 AI2,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI2.list
-ruleset=🍎 Apple下单,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-secure.list
+ruleset=🍎 Apple服务,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-server.list
 ruleset=🍎 Apple推送,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-push.list
 ruleset=🍎 Apple下载⚡,https://raw.githubusercontent.com/lovehuiping/adg-white-list/refs/heads/main/Apple-iosapp-cdn.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
