--- a/newclash.ini
+++ b/newclash.ini
@@ -34,7 +34,7 @@ custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有-自动`[]所有-手动`[
 custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有-自动`[]所有-手动`[]香港-自动`[]台湾-自动`[]其他-自动`[]REJECT
 
 ;3、节点组
-custom_proxy_group=所有-手动`select`[]所有-自动`[]DIRECT`.*
+custom_proxy_group=所有-手动`select`[]所有-自动`[]其他-自动`[]DIRECT`.*
 custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`180,5,100
 custom_proxy_group=香港-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`180,5,100
 custom_proxy_group=台湾-自动`url-test`(广台|台湾|台灣|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan)`http://www.gstatic.com/generate_204`180,5,100
